@@ -39,8 +39,6 @@ dnl
 
 GLIB2_VERSION=2.0
 LIBXML2_VERSION=2.4.23
-LIBGNOMEUI_VERSION=2.0.3
-PANGO_VERSION=1.0.4
 
 dnl Checks for programs.
 AC_PROG_CC
